--- a/index.html
+++ b/index.html
@@ -51,10 +51,6 @@
       <h1 class="sitename">Zhang Zhang</h1>
     </a>
 
-    <div class="social-links text-center">
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-    </div>
-
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
@@ -103,7 +99,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Curious, adaptable, and impact-driven — I'm a developer who thrives on solving meaningful problems through software.</p>
+        <p>
+          I'm a motivated and curious developer who enjoys building practical solutions to real-world problems. 
+          I take initiative, work hard, and thrive on challenges — always aiming to deliver with responsibility, attention to detail, and a strong work ethic.</p>
       </div>
     
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -119,12 +117,20 @@
             <h2>Graduate Software Developer</h2>
             <p class="fst-italic py-3">
               MSc Computing graduate from Imperial College London with a first-class BSc in Biomedical Sciences. 
-              Passionate about building impactful tech and continuously learning, I've worked on full-stack apps, data visualization tools, and hackathon projects — always aiming to write clean, effective, and scalable code.
+              Through hands-on projects, hackathons, and academic research, I've built full-stack applications, interactive data visualizations, and scalable systems using Python, JavaScript, React, Docker, Microsoft Azure, and more. 
+              I'm a quick learner and always curious — constantly picking up new tools and technologies.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>MSc Computing, Imperial</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>MSc Computing at Imperial, BSc Biomedical Sciences at University of Bristol</span></li> -->
+                  <li class="d-flex">
+                    <i class="bi bi-chevron-right me-2 mt-1"></i>
+                    <div>
+                      <strong>Education:</strong>
+                      <span>MSc Computing at Imperial College, BSc Biomedical Sciences at University of Bristol</span>
+                    </div>
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Tech Stack:</strong> <span>Python, JavaScript, C++, React</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:zhangz_12@outlook.com">zhangz_12@outlook.com</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>07311733513</span></li>
@@ -139,10 +145,12 @@
                 </ul>
               </div>
             </div>
-            <p class="py-3">
-              With hands-on experience in Python, React, Docker, and cloud platforms like AWS and Azure, 
-              I thrive in solving real-world problems through technology. Whether it's a collaborative hackathon or a solo project, 
-              I'm excited to contribute, grow, and make a difference through software.
+            <p class="mb-2">
+              I value collaboration and clear communication, shaped by both team-based software projects and three years of part-time work in fast-paced kitchens. 
+            </p>
+            <p class="mb-0">
+              Outside of tech, I'm passionate about cooking, gaming, and music — I play piano, guitar, bass, and drums, and I'm currently learning to write my own music. 
+              I also used to train in karate and play basketball at university. I bring that same energy and resilience into everything I do.
             </p>
           </div>
         </div>
