--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - iPortfolio Bootstrap Template</title>
+  <title>Zhang Zhang</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,8 +46,6 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
       <h1 class="sitename">Zhang Zhang</h1>
     </a>
 
@@ -84,7 +82,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.JPG" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/hero-bg.JPEG" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Zhang Zhang</h2>
@@ -111,7 +109,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.JPG" class="img-fluid" alt="">
+            <img src="assets/img/profile-img-vertical.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Graduate Software Developer</h2>
