feat: add another portfolio item. style: modify the styles of portfolio image dislpay

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <div class="col-lg-6 col-md-8">
             <div class="portfolio-content bg-transparent p-0 border-0 flex justify-content-center">
           
-              <img src="assets/img/portfolio/crypto-explorer.jpg" class="img-fluid rounded portrait-img" alt="Crypto Explorer">
+              <img src="assets/img/portfolio/crypto-explorer.jpg" class="img-fluid rounded uniform-img" alt="Crypto Explorer">
               <div class="portfolio-info pt-3">
                 <h4>Crypto Explorer</h4>
                 <p>An interactive real-time Bitcoin data visualisation tool for Imperial's Data Observatory.</p>
@@ -296,6 +296,20 @@
               </div>
             </div>
           </div><!-- End Portfolio Item -->
+
+          <!-- Portfolio Item 2: MoodSwings -->
+          <div class="col-lg-6 col-md-8">
+            <div class="portfolio-content bg-transparent p-0 border-0 d-flex flex-column align-items-center">
+              <img src="assets/img/portfolio/moodswings.png" class="img-fluid rounded uniform-img" alt="MoodSwings Project">
+              <div class="portfolio-info text-center pt-3">
+                <h4>MoodSwings (Hackathon Project)</h4>
+                <p>A 24-hour hackathon project that recommends music based on real-time emotion detection via facial recognition.</p>
+                <a href="https://github.com/joeykyleung/moodswings" target="_blank" class="btn btn-sm btn-outline-primary">
+                  <i class="bi bi-github me-1"></i> GitHub
+                </a>
+              </div>
+            </div>
+          </div>
      
         </div>
       </div>
