fix: change img file name

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <div class="col-lg-6 col-md-8">
             <div class="portfolio-content bg-transparent p-0 border-0 flex justify-content-center">
           
-              <img src="assets/img/portfolio/crypto-explorer.jpg" class="img-fluid rounded uniform-img" alt="Crypto Explorer">
+              <img src="assets/img/portfolio/crypto-explorer.JPEG" class="img-fluid rounded uniform-img" alt="Crypto Explorer">
               <div class="portfolio-info pt-3">
                 <h4>Crypto Explorer</h4>
                 <p>An interactive real-time Bitcoin data visualisation tool for Imperial's Data Observatory.</p>
@@ -309,7 +309,7 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div><!-- End Portfolio Item -->
      
         </div>
       </div>
